{{$NEXT}}

2.123612  2012-12-26 18:38:34 Europe/London

  * More logging configuration, and some Cookbook details on how to log.

2.123611  2012-12-26 15:23:41 Europe/London

  * Remove redundant Net::Telnet->open() (closes #10, closes #11)

2.123610  2012-12-26 15:04:44 Europe/London

  * Time to release pending changes.

2.123370_002 2012-12-02 00:24:38 Europe/London

  * Change command remove to be less greedy with whitespace (C. Bennett)
  * Fix loading of Data::Printer for last_actionset debug

2.123300_001 2012-11-25 13:47:15 Europe/London

  * Change command remove to be less greedy with whitespace (C. Bennett)

2.123270  2012-11-22 20:50:30 Europe/London

  * Bug fix for wrong type spec on log_config (A. Friedrich)

2.122940  2012-10-20 12:39:46 Europe/London

  * Bug fix for wrong type spec on log_at (wmdopple, closes #9)

2.122730  2012-09-29 23:49:08 Europe/London

  * IMPORTANT: the prompts named "prompt" are now called "generic"
    If you have written macros depending on these, please update your phrasebooks.

  * Make IO::Pty dependency based on compiler availability
  * Refactor to provide unix IPC::Run support where there is no IO::Pty
  * Add opts support to Serial Transport
  * Fix phrasebook loading to use all library and add_library paths
  * Support out of order entries in phrasebooks (macro/prompt refs)
  * New phrasebook for Bash shell
  * Improve documentation on how to create new phrasebooks
  * Permit ASCII escape \033 in device output
  * Added Loopback transport for testing
  * find_prompt now stores a full ActionSet after success
  * debug level logging will use Data::Printer on last_actionset if it can

2.122630  2012-09-19 17:21:30 Europe/London

  * Port from Moose to Moo

1.122530  2012-09-09 15:52:07 Europe/London

  * Alter log messages so that notice is a more useful default
  * Delete SIGCHLD after close (rt.cpan#79450)

1.122100  2012-07-29 00:33:51 Europe/London

1.122020_002 2012-07-20 15:56:04 Europe/London
