@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Change default_log_categories from an array to a class method.
+
 2.123612  2012-12-26 18:38:34 Europe/London
 
   * More logging configuration, and some Cookbook details on how to log.
